name:                haskell-rehtie
version:             0.1.0.0
synopsis:            Values with two possibilities
description:         Please see README.md
homepage:            https://github.com/adarqui/haskell-rehtie#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
copyright:           2016 Andrew Darqui
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >= 2.2

library
  hs-source-dirs:      src
  exposed-modules:     Data.Rehtie
  build-depends:       base < 5
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite haskell-rehtie-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-rehtie
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adarqui/haskell-rehtie
